# SDLOpenGL

./: .gitignore  CMakeLists.txt  SDLUITest.sln
3rd Party/SDL2-2.0.8/lib/arm64/: libSDL2.la
Assets/Shaders/: BaseMap.vert  LightPass.frag  LightPass.vert
Assets/Shaders/gles/: PointShad.geom  Shadows.frag
Debug/x64/: render.cap  renderdoc.cap
Debug/x64/Assets/Models/: Piernik.mtl  PiernikNorm.mtl
Debug/x64/Assets/Shaders/: BaseMap.frag  BaseMap.vert  DebugLights.frag  DebugLights.vert  Gui.frag  Gui.fs  Guie.vert  HeightMap.vert  LightPass.frag  NormalMap.frag  PointShad.geom  PointShad.vert  Scene.frag  Scene.fs  Scene.vert  Scene.vs  Shadows.frag  final.frag  final.vse
Debug/x64/Assets/Shaders/gles/: DebugLights.frag  PointShad.vert  PointShade.frag  Scene.frag  finale.frag
Debug/x64/Assets/Textures/: CubeBase.tga  Tex.tga
Debug/x86/: SDLUITest.ilk
Debug/x86/Assets/Scenes/: scene1.txt
Debug/x86/Assets/Shaders/: Gui.vs  Scene.vse  fs.fs
SDLUITest/: CApp.cpp  CApp.h  CBaseComponent.cpp  CBaseComponent.h  CButton.cpp  CButton.h  CCameraComponent.cpp  CCameraComponent.h  CConsole.cpp  CConsole.h  CContainer.cpp  CContainer.h  CEvent.cpp  CEvent.h  CFontManager.cpp  CFontManager.h  CGameplay.cpp  CGameplay.h  CGameplayManager.cpp  CGameplayManager.h  CHeightMap.cpp  CHeightMap.h  CImage.cpp  CImage.h  CInitialSetup.cpp  CInitialSetup.h  CKeyboardConf.cpp  CKeyboardConf.h  CLabel.cpp  CLabel.h  CLayout.cpp  CLayout.h  CLayoutManager.cpp  CLayoutManager.h  CLightComponent.cpp  CLightComponent.h  CListBox.cpp  CListBox.h  CLog.cpp  CLog.h  (+47 more)
SDLUITest/Assets/Models/multiMaterialTest/: MultiMaterialTestblend.mtl
SDLUITest/Assets/Scenes/: BaseScene.xml  scene1.txt
SDLUITest/Assets/Shaders/: BaseMap.frag  DebugLights.frag  DepthPass.frag  DepthPass.vert  Gui.fs  Gui.vs  NormalMap.vert  PointShad.frag  Scene.frag  Scene.fs  Scene.vert  Scene.vs  Scenee.frag  Shadows.vert  Shadows.vs  SpecularMap.frag  final.frag  final.fs  final.fse  final.vs  fs.fs  fs.fse  vs.vs
SDLUITest/Assets/Shaders/gles/: DebugLights.vert  Gui.frag  Scene.frag  Scene.vert  Shadows.vert
SDLUITest/Shaders/: fs.fs  vs.vs
SDLUITest/core/components/: CBaseComponent.cpp  CBaseComponent.h  CCameraComponent.cpp  CCameraComponent.h  CHeightMapComponent.cpp  CHeightMapComponent.h  CLightComponent.cpp  CLightComponent.h  CMovementComponent.cpp  CMovementComponent.h  CObject3D.cpp  CObject3D.h  CSpriteComponent.cpp  CSpriteComponent.h  CStaticMeshComponent.cpp  CStaticMeshComponent.h
SDLUITest/core/managers/: CEventManager.cpp  CEventManager.h  CFontManager.cpp  CFontManager.h  CGameplayManager.cpp  CGameplayManager.h  CInitialSetup.h  CKeyboardConf.cpp  CKeyboardConf.h  CLayoutManager.cpp  CLayoutManager.h  CMaterialManager.cpp  CMaterialManager.h  CModelManager.cpp  CModelManager.h  CSceneManager.cpp  CSceneManager.h  CSettingsManager.cpp  CSettingsManager.h  CTextureManager.cpp  CTextureManager.h  CWindowManager.cpp  CWindowManager.h
SDLUITest/core/renderer/: COpengl.cpp  COpengl.h  GLSLShader.cpp  GLSLShader.h  IShader.h  Renderer.h  Shaders.cpp  Shaders.h
SDLUITest/core/scene/: CScene.cpp  CScene.h  CSkybox.cpp  CSkybox.h
SDLUITest/core/shared/: Primitives.h  Shared.h  StdLibWrapper.cpp  StdLibWrapper.h  TextureBaseData.h
SDLUITest/core/widgets/: CButton.cpp  CButton.h  CContainer.cpp  CContainer.h  CImage.cpp  CLabel.cpp  CLabel.h  CListBox.cpp  CObject2D.cpp  CObject2D.h  CTextBox.cpp  CTextBox.h
TestingProj/: TestingProj.vcxproj  test.cpp
emscriptenOutput/: SDLUITest.html
